execution with modules