@@ -1,24 +1,28 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <parent>
         <groupId>com.example</groupId>
         <artifactId>SimpleHello</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.example.app</groupId>
+    
+    <groupId>com.example.junit</groupId>
     <artifactId>HelloTest</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>HelloTest</name>
-    <url>http://maven.apache.org</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <url>https://github.com/j4n0/SimpleHello</url>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>com.example.app</groupId>
@@ -33,12 +37,23 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <executable>java</executable>
                     <arguments>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>com.example.app.Hello</argument>
+                        <argument>--module-path</argument>
+                        <modulepath/>
+                        <argument>--add-modules</argument>
+                        <argument>HelloTest</argument>
+                        <argument>--module</argument>
+                        <argument>junit/org.junit.runner.JUnitCore</argument> 
+                        <argument>com.example.junit.HelloTest</argument>
                     </arguments>
                 </configuration>
             </plugin>
